@@ -15,6 +15,12 @@ Each of these values can be found in any section. The service being run will try
 2.1.2 Options
 list_style: [<style>,<style>,...] Comma-separated (no spaces) list of attributes to print out when using the 'list' task and no styles are specified on the command line. For a list of styles, see the README.
 <option>: [<string>], You can specify any option in the config file to use as a "general" case. When a command-line option is required (for example the username, or the title of an album created with Picasa), and nothing is passed in via the command line, this value will be used.
+cap_results: [True, False], Cap the number of results to max_results. (That is, queries will only return one feed).
+max_results: [<integer>], Maximum number of results / entries to return. Sets the max-results query parameter of the uri. You can use this with cap_results to limit the amount of data being sent over the network.
+regex: [True, False], Use regular expressions in matching titles.
+delete_by_default: [True, False], When prompted to confirm deletion of an object, hitting enter directly will confirm the delete.
+delete_prompt: [True, False], Prompt to confirm deletion of items.
+tags_prompt: [True, False], Prompt for tags for each item being uploaded. (Not fully implemented).
 
 2.2 PICASA
 access: [public, private, protected], The default access level of the albums you create. Public means visible to all, private means unlisted, protected means sign-in required to view the album.
@@ -26,10 +32,6 @@ format: [<extension>], The extension to use by default if the document type is n
 editor: [<editor>], The editor to use by default if the document type is not defined by an xxx_editor option. If this is not defined, will use the EDITOR environment variable instead.
 
 2.4 GENERAL
-regex: [True, False], Use regular expressions in matching titles.
-delete_by_default: [True, False], When prompted to confirm deletion of an object, hitting enter directly will confirm the delete.
-delete_prompt: [True, False], Prompt to confirm deletion of items.
-tags_prompt: [True, False], Prompt for tags for each item being uploaded. (Not fully implemented).
 url_style: [site, direct], Which sub-style to use for listing urls. Site will typically put you at the website, while direct is usually a link directly to the resource.
 missing_field_value: [<string>] Placeholder string to use when listing an invalid attribute, for example, the url of a contact.
 date_print_format: [<format string>] Format to use when printing date information. See the Python "time" documentation for formats (http://docs.python.org/library/time.html#time.strftime). For example: "%m %d at %H" for "<month> <day> at <hour>"
