@@ -2,6 +2,7 @@ svn HEAD
  Enhancements
  * setuptools support added for setup.py. (Thanks, dcolish!)
  * Calendar service supports multiple calendar operations.
+ * More results are returned by queries, and control over number of results given to user with config file options.
 
  Bugfixes
  * Uploads to folders supported for more recent versions of gdata-python-client.
